package gameLaby.laby;

public interface Victime {

   void subirDegats(int degats);

}
